state breaks the maze solver

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
+.container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 .maze-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 11rem;
+    width: 20rem;
     margin: 10rem auto;
 }
 .box-container {
@@ -21,4 +28,14 @@
 
 .one {
     background-color: lightblue;
+}
+.nine {
+    background-color: yellow;
+}
+.two {
+    background-color: blue;
+}
+
+.path {
+    background-color: greenyellow !important;
 }
